<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CGNet Swara</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="main_title">CGNet Swara</string>
    <string name="begin">Begin</string> 
    
    <string name="zero">Start recording</string>
    <string name="one">Stop</string> 
    <string name="three">3</string>
    
    <string name="record">Record message</string>
    <string name="include_image">Record + include image</string>
    <string name="listen">Listen to messages</string>
     
    <string name="playback">Playback audio</string>
    <string name="send">Send audio</string>
    <string name="back">Back to main menu</string>
    <string name="your_number">Your phone number </string>
   
    <string name="download_more">Download More</string>
    
    <string name="limit">Audio recordings must be less than 3 minutes.</string>
    
     
</resources>
