<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"  
    android:gravity="center_vertical"
    android:padding="5dip"  
    android:orientation="vertical" >
    
    <ImageView
        android:id="@+id/userImage"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_margin="1dip"
        android:layout_weight="0.50"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/background_test" />
        
    <TextView
        android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="18sp"
        android:gravity="center" 
        android:layout_marginBottom="30dip"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/start"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:layout_weight="1"
            android:src="@drawable/record_icon"
            android:background="@drawable/button_red"
            android:text="@string/zero" 
            android:drawablePadding="20dp"
            android:padding="20dip" 
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/stop"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:layout_weight="1"
            android:src="@drawable/stop_icon"
            android:background="@drawable/button_red"
            android:text="@string/one"
            android:drawablePadding="20dp" 
            android:padding="20dip" 
            android:textSize="20sp" />
    </LinearLayout>
 
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
	    <ImageButton
	        android:id="@+id/playback"
	        android:layout_margin="5dip"
	        style="?android:attr/buttonStyleSmall"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content" 
	        android:background="@drawable/button_red"
	        android:text="@string/playback" 
	        android:src="@drawable/play_icon"
	        android:layout_weight="1"
	        android:drawablePadding="10dp" 
	        android:padding="10dip" 
	        android:textSize="20sp" />
		  
	    <ImageButton
	        android:id="@+id/sendAudio"
	        android:layout_margin="5dip"
	        style="?android:attr/buttonStyleSmall"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content" 
	        android:layout_weight="1"
	        android:background="@drawable/button_red"
	        android:text="@string/send" 
	        android:src="@drawable/select_icon"
	        android:drawablePadding="10dp" 
	        android:padding="10dip"
	        android:textSize="20sp" />
    </LinearLayout>
 
	<ImageButton
        android:id="@+id/backToMain"
        android:layout_margin="5dip"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/button_red"
        android:text="@string/back" 
        android:src="@drawable/logout_icon"
        android:drawablePadding="10dp" 
        android:padding="10dip"
        android:textSize="20sp" />
 
 	 
</LinearLayout>